--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,9 +1,9 @@
-* Standard docker installation *
+*** Standard docker installation *
 - Clone the git repository: https://github.com/sepla/ownsafe.git
 - Go into the created "ownsafe" folder and run: docker-compose -f ./docker/docker-compose.yml up --build -d
 
 
-* Portainer installation *
+*** Portainer installation *
 - Create a new Stack
     Name: ownsafe
     Use repository with URL: http://github.com/sepla/ownsafe.git
@@ -11,8 +11,8 @@
 - Deploy the stack
 
 
-* Email configuration *
-- Go to the "config"-folder at location of the created "ownsave_www-data" docker volume
+*** Email configuration *
+- Go to the "config"-folder at the mount path of created "ownsafe_www-data" docker volume (e.g./var/lib/docker/volumes/ownsafe_www-data/_data)
 - Edit the config.php file and edit the following lines:
     $mail->Host       = 'hostUrl';
     $mail->Username   = 'username';
@@ -22,11 +22,11 @@
     $mailNoReply      = 'no-reply@local.host';
 
 
-* SSL/TLS Installation *
+*** SSL/TLS Installation *
 - Create a private key "ownsafe.key" and certificate "ownsafe.crt".
-- Go to the "ssl"-folder at the location of the "ownsave_nginx-conf" docker volume
+- Go to the "ssl"-folder at the mount path of "ownsafe_nginx-conf" docker volume (e.g. /var/lib/docker/volumes/ownsafe_nginx-conf/_data)
 - Copy the created .key and .crt file into the "ssl"-folder
-- Edit the nginx.conf file on "ownsave_nginx-conf"-Volume and activate the following values:
+- Edit the nginx.conf file on "ownsafe_nginx-conf"-Volume and activate the following values:
     listen 443 ssl;
     listen [::]:443 ssl;
     ssl_certificate /etc/nginx/conf.d/ssl/ownsafe.crt;
@@ -35,4 +35,7 @@
 - Restart the container, https works on port 444
 
 
+*** DB Import/Export *
+- Import data (from sql file): docker exec -i Ownsafe_DB mysql -uownsafe -pownsafe ownsafe < ownsafe.sql
+- Export data (to sql file):   docker exec -i Ownsafe_DB /usr/bin/mysqldump -uownsafe -pownsafe --skip-extended-insert --skip-comments ownsafe > ownsafe.sql
 
